Etapa 5 jogo perguntados

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch JogoPerguntados05",
+            "request": "launch",
+            "mainClass": "JogoPerguntados05",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
+            "name": "Launch JogoPerguntados04",
+            "request": "launch",
+            "mainClass": "JogoPerguntados04",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
             "name": "Launch JogoPerguntados03",
             "request": "launch",
             "mainClass": "JogoPerguntados03",
