--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Ex01",
+            "request": "launch",
+            "mainClass": "Ex01",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
+            "name": "Launch JogoPerguntados07",
+            "request": "launch",
+            "mainClass": "JogoPerguntados07",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
             "name": "Launch JogoPerguntados06",
             "request": "launch",
             "mainClass": "JogoPerguntados06",
