--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Ex09",
+            "request": "launch",
+            "mainClass": "Ex09",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
+            "name": "Launch Ex08",
+            "request": "launch",
+            "mainClass": "Ex08",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
+            "name": "Launch Ex07",
+            "request": "launch",
+            "mainClass": "Ex07",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
             "name": "Launch Ex06",
             "request": "launch",
             "mainClass": "Ex06",
