--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch projetoIntegrador01",
+            "request": "launch",
+            "mainClass": "projetoIntegrador01",
+            "projectName": "java_ba28b038"
+        },
+        {
+            "type": "java",
             "name": "Launch Loto",
             "request": "launch",
             "mainClass": "Loto",
